--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -457,3 +457,54 @@ footer .footer-below {
     display: none;
     opacity: 0;
 }
+
+/* SVG */
+.icon {
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	fill: currentColor;
+}
+
+.icon-cogs {
+    font-size: 150px;
+    color: blue;
+}
+
+.icon-checkmark {
+    font-size: 150px;
+    color: black;
+}
+
+.icon-js {
+    font-size: 150px;
+    color: black;
+}
+
+.icon-clipboard {
+    font-size: 150px;
+    color: black;
+}
+
+.icon-bin {
+    font-size: 150px;
+    color: black;
+}
+
+.icon-rocket {
+    font-size: 150px;
+    color: black;
+}
+
+.icon-html52 {
+    font-size: 250px;
+    color: blue;
+    float: right;
+}
+/* =======================================================================================
+Example showing how to change the color/size of the icons:
+.icon-name {
+	font-size: 32px; // works because "width" & "height" were set using em units
+	color: red; // works for single-colored icons, because "fill" was set to "currentColor"
+}
+======================================================================================== */
